force-app/main/default/objects/redwing__Auto_Assign_Rule_Processing_Item__c/redwing__Auto_Assign_Rule_Processing_Item__c.object-meta.xml
<CustomObject>
    <label>Auto-Assign Rule Processing Item</label>
    <nameField>
        <displayFormat>AARPI-{00000000}</displayFormat>
        <label>Auto-Assign Rule Processing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto-Assign Rule Processing Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>