force-app/main/default/objects/redwing__Auto_Assign_Rule_Processing_Item__c/fields/redwing__Errors__c.field-meta.xml
<CustomField>
    <fullName>redwing__Errors__c</fullName>
    <label>Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>