force-app/main/default/objects/redwing__Auto_Assign_Rule_Processing_Item__c/fields/redwing__Learning_Batch_Operation__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Batch_Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Learning Batch Operation.</inlineHelpText>
    <label>Learning Batch Operation</label>
    <referenceTo>redwing__Learning_Batch_Operation__c</referenceTo>
    <relationshipLabel>Auto-Assign Rule Processing Items</relationshipLabel>
    <relationshipName>Auto_Assign_Rule_Processing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>