force-app/main/default/objects/redwing__Auto_Assign_Rule_Processing_Item__c/fields/redwing__Processed__c.field-meta.xml
<CustomField>
    <fullName>redwing__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>