force-app/main/default/objects/redwing__Auto_Assign_Rule_Processing_Item__c/fields/redwing__Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Plan</label>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Auto-Assign Rule Processing Items</relationshipLabel>
    <relationshipName>Auto_Assign_Rule_Processing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>