force-app/main/default/objects/redwing__Auto_Assign_Rule_Processing_Item__c/fields/redwing__Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>