force-app/main/default/objects/redwing__Auto_Assign_Rule_Processing_Item__c/fields/redwing__User__c.field-meta.xml
<CustomField>
    <fullName>redwing__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Auto-Assign Rule Processing Items</relationshipLabel>
    <relationshipName>Auto_Assign_Rule_Processing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>